[tool.poetry]
name = "kolyakinkt"
version = "0.1.0"
description = ""
authors = ["wannawhat <wannawhere4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pytest = "^7.4.3"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

